add - also update mail, age and bio

--- a/express-input-test/views/updateUser.ejs
+++ b/express-input-test/views/updateUser.ejs
@@ -20,6 +20,14 @@
         value="<%= user.lastName %>"
         required
       />
+      <input
+        type="email"
+        name="userMail"
+        value="<%= user.userMail %>"
+        required
+      />
+      <input type="number" name="userAge" value="<%= user.userAge %>" />
+      <input type="text" name="userBio" value="<%= user.userBio %>" />
       <button type="submit">Update User</button>
     </form>
     <a href="/">Back to home</a>
