--- a/express-input-test/views/index.ejs
+++ b/express-input-test/views/index.ejs
@@ -5,6 +5,7 @@
     <title><%= title %></title>
   </head>
   <body>
+    <a href="/searchUser">Search by Name</a>
     <h1><%= title %></h1>
     <!-- In views/index.ejs -->
     <ul>
